--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
@@ -32,6 +34,7 @@ a {
 }
 
 .search-wrapper {
+  /* height: 10vh; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,17 +45,11 @@ a {
 .search-input {
   padding: 0.5em 1em;
 }
+
 .search-input {
   width: 40vw;
 }
 
-main {
-  height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem;
-}
 #no-data-img {
   min-width: 200px;
   max-width: 400px;
@@ -61,15 +58,9 @@ main {
 }
 
 .movie-list {
-  width: 100%;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
-  max-height: 74vh;
   overflow-y: auto; /* Adds a scrollbar if content exceeds max height */
-  position: fixed; /* or 'fixed' */
-  top: 25%; /* Sets the top position to 25% of the viewport height */
   margin: 30px;
 }
 
